  bios/vectors.S bios/xbios.c include/config.h: Added the CONF_WITH_FLOPPY
  define to allow disabling floppy support. (VRI)
- bios/screen.c: Improved conditional compilation. (VRI)

2011-12-05
- bios/screen.c: Change default ST video boot mode to ST Low when colour
  monitor is attached. (RFB)
- bios/screen.c: Add VGA/50Hz modes to table of valid Falcon video modes. (RFB)
- aes/basepage.h aes/gemaplib.c aes/geminit.c aes/gemlib.h aes/struct.h
  desk/deskapp.h desk/deskins.c include/compat.h: Remove I8086 #define
  and all code conditional upon it. (RFB)
- aes/gemaplib.c aes/geminit.c aes/gemoblib.c aes/struct.h desk/deskglob.c
  include/compat.h: Remove MC68K #define and ensure that code previously
  conditional on MC68K is now always compiled. (RFB)

2011-12-07
- bios/lineainit.c: Fix crash when booting in TT High resolution. (RFB)

2011-12-10
- bios/bios.c bios/kprint.c bios/kprint.h: Fix crash when kprintf() was
  called from user mode to write to RS232 or MIDI. (RFB)

2011-12-11
- bios/bios.c bios/clock.c bios/clock.h bios/machine.c bios/machine.h
  include/config.h: Added the CONF_WITH_MEGARTC define to allow disabling MegaST
  real-time clock support. (VRI)

2011-12-12
- bios/aciavecs.S bios/midi.c include/config.h: Added the CONF_WITH_MIDI_ACIA
  define to allow disabling MIDI ACIA support. (VRI)
- bios/chardev.c bios/mfp.c include/config.h: Added the CONF_WITH_MFP_RS232
  define to allow disabling MFP RS-232 support. (VRI)

2011-12-14
- bios/screen.c bios/screen.h bios/xbios.c: Added TT video syscalls. (RFB)
- bios/aciavecs.S bios/clock.c include/config.h: Added the CONF_WITH_IKBD_CLOCK
  define to allow disabling IKBD clock support. (VRI)

2011-12-15
- bios/acia.h bios/aciavecs.S bios/ikbd.c include/config.h: Added the
  CONF_WITH_IKBD_ACIA define to allow disabling IKBD ACIA support. (VRI)
- bios/aciavec.S include/config.h: Use midivec even when CONF_WITH_MIDI_ACIA
  is defined. (VRI)
- bios/ikbd.c: Improved debug traces. (VRI)